[package]
name = "novusk"
version = "4.0.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2021"
publish = false

[workspace]
members = [
    "arch/aarch64/",
    "arch/arm/",
    "arch/riscv/",
    "arch/x86_64/",
    # "arch/xtensa/",

    "drivers/boot/nkuefi/",
    "drivers/cpu/",
    "drivers/device/",
    "drivers/display/ssd/",
    "drivers/fb/",
    "drivers/firmware/soc/",
    "drivers/firmware/soc/bcm/",
    "drivers/fom_os/",
    "drivers/gpu/armfb/",
    "drivers/gpu/vgag/",
    "drivers/input/keyboard/pc_keyboard/",
    "drivers/irqchip/i8259/",
    "drivers/irqchip/ibcm/",
    "drivers/irqchip/invic/",
    "drivers/net/ethernet/",
    "drivers/platform/arm/hio/",
    "drivers/platform/rpi/",
    "drivers/platform/stellaris/",
    "drivers/platform/stellaris/stellariskern/",
    "drivers/platform/stm/",
    "drivers/platform/stm/stmkern/",
    "drivers/storage/lba/",
    "drivers/usbd/",

    "fs/tempfs/",
    "fs/vfs/",

    "include/asm/",
    "include/ctypes/",
    "include/novusk/",

    "init/",
    "kernel/irq/",
    "kernel/kinfo/",
    "kernel/power/",
    "kernel/printk/",
    "kernel/setup/",
    "kernel/time/",

    "lib/libbmu/",
    "lib/libc/unistd/",
    "lib/libcolor/",
    "lib/libost/",
    "lib/libwin/",

    "mm/memory/",
    "mm/mio/",
    "mm/nmallocator/",

    # "net/ethernet/stm_eth/",
    "sound/x86_64-sound/",

    "tools/build/ccbuild/",
    "tools/build/buildkern/",

    "tests/",
]
