[package]
name = "novusk"
version = "3.0.2"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "novusk_kernel"
path = "src/main.rs"
edition = "2021"

[lib]
name = "novusk"
path = "src/lib.rs"
edition = "2021"
# Remove the comment if you're going to link Novusk to something else
# crate-type = ["staticlib"]

[workspace]
members = [
    # Architectures
    "arch/aarch64/",
    "arch/arm/",
    "arch/riscv/",
    "arch/x86_64/",
    "arch/xtensa/",
    # Drivers
    "drivers/boot/multiboot/",
    "drivers/cpu/",
    "drivers/cpu/bcm_soc/",
    "drivers/device/",
    "drivers/platform/arm/stellarisd/",
    # "drivers/platform/arm/stmd/",
    "drivers/platform/esp/",
    "drivers/platform/mailbox/",
    "drivers/platform/sifive/",
    "drivers/fb/armfb/",
    "drivers/fom_os/",
    "drivers/gpu/vgag/",
    "drivers/input/keyboard/",
    "drivers/input/keyboard/pc_keyboard/",
    "drivers/input/mouse/",
    "drivers/input/mouse/kb_mouse/",
    "drivers/input/mouse/ps2_mouse/",
    "drivers/irqchip/invic/",
    "drivers/net/ethernet/",
    "drivers/nkuefi/",
    "drivers/rpi/",
    "drivers/rpi/rpi2kernel/",
    "drivers/sos/",
    "drivers/storage/",
    "drivers/storage/lba/",
    "drivers/storage/sd/rpisd/",
    "drivers/usbd/",
    # Fs
    "fs/tempfs/",
    "fs/vfs/",
    # Include
    "include/ctypes/",

    # Kernel
    "init/",
    "kernel/irq/",
    "kernel/kinfo/",
    "kernel/konfig/",
    "kernel/modules/",
    "kernel/notify/",
    "kernel/power/",
    "kernel/printk/",
    "kernel/printk/console/",
    "kernel/setup/",
    "kernel/sys/",
    "kernel/time/",
    # Libraries

    "lib/libbmu/",
    "lib/libcolor/",
    "lib/libost/",
    "lib/libwin/",
    # MM
    "mm/mio/",
    "mm/memory/",
    "mm/nmallocator/",
    # Net
    # "net/ethernet/stm_eth/",
    # Sound
    "sound/x86_64-sound/",
    # Kernel Modules
    "kernel/modules/ex1/",
    "kernel/modules/fscheck/",
    # Tools
    "tools/bootloader_image/",

    "tests/",
]

[dependencies]
kinfo = { path = "kernel/kinfo/" }
libcolor = { path = "lib/libcolor/" }
memory = { path = "mm/memory/" }
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", features = ["v3"] }
printk = { path = "kernel/printk/" }
storage = { path = "drivers/storage/" }
usbd = { path = "drivers/usbd/" }
vfs = { path = "fs/vfs/" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.9.18"
kb_mouse = { path = "drivers/input/mouse/kb_mouse/" }
lba = { path = "drivers/storage/lba/" }
libwin = { path = "lib/libwin/" }
libost = { path = "lib/libost/" }
pc_keyboard = { path = "drivers/input/keyboard/pc_keyboard/" }
vgag = { path = "drivers/gpu/vgag/" }
x86_64 = { path = "arch/x86_64/" }
x86_64-sound = { path = "sound/x86_64-sound" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64 = { path = "arch/aarch64/" }
armfb = { path = "drivers/fb/armfb/" }
libbmu = { path = "lib/libbmu/" }
libwin = { path = "lib/libwin/" }
libost = { path = "lib/libost/" }
# rpi = { path = "drivers/rpi/" }

[target.'cfg(target_arch = "arm")'.dependencies]
arm = { path = "arch/arm/" }
armfb = { path = "drivers/fb/armfb/" }
libbmu = { path = "lib/libbmu/" }

[target.'cfg(target_arch = "riscv32")'.dependencies]
libbmu = { path = "lib/libbmu/" }
riscv = { path = "arch/riscv" }

[target.'cfg(target_arch = "xtensa")'.dependencies]
xtensa = { path = "arch/xtensa/" }
xtensa-lx-rt = { version = "0.13.0" }

[features]
bios_boot = ["x86_64/bios_boot"]
bootloader_rs = ["x86_64/bootloader_rs"]
custom_config = []
esp32 = ["xtensa/esp32"]
grub = ["multiboot", "x86_64/grub"]
hifive = ["riscv/hifive"]
lofive = ["riscv/lofive"]
multiboot = []
rpi3 = ["aarch64/rpi3"]
rpi2 = ["arm/rpi2"]
stellaris6965 = ["arm/stellaris_6965"]
none = []
# stm32f407 = ["arm/stm32f407"]
# stm32f4 = ["arm/stm32f4"]
# stm32f401 = ["arm/stm32f401"]
# stm32f407 = ["arm/stm32f407"]
uefi_boot = ["x86_64/uefi_boot"]
vga_0xa = ["x86_64/vga_0xa", "bootloader/vga_320x200"]
virt = ["aarch64/qemu_virt", "riscv/virt", "x86_64/virt"]

# For developers:
qemu = []
debug = []
