[package]
name = "novusk"
version = "3.0.2"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "novusk_kernel"
path = "src/main.rs"
edition = "2021"

[lib]
name = "novusk"
path = "src/lib.rs"
edition = "2021"

[workspace]
members = [
    # Architecutres
    "arch/arm/",
    "arch/x86_64/",

    # Drivers
    "drivers/irqchip/pic8259/",
    "drivers/platform/stm/",
    "drivers/platform/ti_lm3s/",

    # Kernel
    "kernel/",
]
