[package]
name = "init"
version = "0.1.0"
edition = "2021"
description = "Main kernel initialization"

[dependencies]
cfg-if = "1.0.0"
console = { path = "../kernel/console/" }
gpu = { path = "../drivers/gpu/" }
kinfo = { path = "../kernel/kinfo/" }
konfig = { path = "../kernel/konfig/", features = ["default_config"] }
lazy_static = "1.4.0"
modules = { path = "../kernel/modules/" }
novuskinc = { path = "../include/novusk/" }
printk = { path = "../kernel/printk/" }
spin = { version = "0.9.2", features = ["spin_mutex"] }
storage = { path = "../drivers/storage/" }
tempfs = { path = "../fs/tempfs/" }
vfs = { path = "../fs/vfs/" }
