[package]
name = "init"
version = "0.1.0"
edition = "2021"
description = "Main kernel initialization"
license = "MIT"
publish = false

[target.'cfg(target_arch = "x86_64")'.dependencies]
storage = { path = "../drivers/storage/" }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
storage = { path = "../drivers/storage/", features = ["empty"] }

[dependencies]
cfg-if = "1.0.0"
console = { path = "../kernel/printk/console/" }
kinfo = { path = "../kernel/kinfo/" }
konfig = { path = "../kernel/konfig/", features = ["default_config"] }
lazy_static = "1.4.0"
modules = { path = "../kernel/modules/" }
novuskinc = { git = "https://github.com/new-kernel/novuskinc", features = ["v3"] }
printk = { path = "../kernel/printk/" }
spin = { version = "0.9.2", features = ["spin_mutex"] }
storage = { path = "../drivers/storage/" }
tempfs = { path = "../fs/tempfs/" }
vfs = { path = "../fs/vfs/" }
