[package]
name = "aarch64"
version = "0.1.0"
edition = "2021"
description = "Aarch64/arm64 kernel support"
license = "MIT"
publish = false

[dependencies]
dif = "0.1.1"
init = { path = "../../init/" }
kinfo = { path = "../../kernel/kinfo/" }
nmallocator = { path = "../../mm/nmallocator/", features = ["wee"] }
novusk_syscalls = "0.2.1"
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", features = ["v3"] }
printk = { path = "../../kernel/printk/" }
tock-registers = "0.8.1"
r0 = "1.0.0"
rpi = { path = "../../drivers/rpi/" }
setup = { path = "../../kernel/setup/" }

[build-dependencies]
difi = "0.1.0"

[features]
rpi3 = ["rpi/rpi3"]
qemu_virt = []
