[package]
name = "aarch64"
version = "0.1.0"
edition = "2021"
description = "Aarch64/arm64 kernel support"
license = "MIT"
publish = false

[dependencies]
dif = "0.1.1"
#ibcm = { path = "../../drivers/irqchip/ibcm/", optional = true }
nmallocator = { path = "../../mm/nmallocator/", features = ["wee"] }
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", branch = "novusk_build", features = ["v3"] }
#printk = { path = "../../kernel/printk/" }
tock-registers = "0.8.1"
r0 = "1.0.0"
#rpi = { path = "../../drivers/rpi/", optional = true }
# setup = { path = "../../kernel/setup/" }
virt = { path = "../../drivers/virt/", optional = true }

[build-dependencies]
difi = "0.1.0"

[features]
rpi3 = []
qemu_virt = ["virt"]
