[package]
name = "arm"
version = "0.1.0"
edition = "2021"
description = "ARM32 kernel support"
license = "MIT"
publish = false

[dependencies]
alloc-cortex-m = { version = "0.4.2", optional = true }
cfg-if = "1.0.0"
cortex-a = "8.0.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.7"
cpu = { path = "../../drivers/cpu/" }
device = { path = "../../drivers/device/" }
dif = "0.1.1"
kernel = { path = "../../kernel/" }
nmallocator = { path = "../../mm/nmallocator/", optional = true }
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", branch = "novusk_build", features = ["v3"] }
r0 = "1.0.0"
setup = { path = "../../kernel/setup/" }
stellarisd = { path = "../../drivers/platform/stellarisd/", optional = true }
time = { path = "../../kernel/time/" }

[build-dependencies]
difi = "0.1.0"

[features]
allocator = []
cortex_a = ["nmallocator"]
cortex_m = ["alloc-cortex-m", "allocator"]
rpi2 = ["cortex_a"]
stellaris_6965 = ["cortex_m", "stellarisd"]
# not_stm32 = ["stmd/stm32f407"]
# stm32f407 = ["cortex_m", "stmd/stm32f407"]
