[package]
name = "arm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arm_novusk"
edition = "2021"
path = "src/main.rs"

[lib]
name = "libarm_kernel"
edition = "2021"
path = "src/lib.rs"

[dependencies]
cfg-if = { version = "1.0.0" }
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
cortex-m-semihosting = { version = "0.5.0", optional = true }
embedded-alloc = "0.5.0"
novuskinc = { git = "https://github.com/new-kernel/novuskinc/" }
r0 = "1.0.0"

# Devices
ti_lm3s = { path = "../../drivers/platform/ti_lm3s/", optional = true }

[features]
cortex_m_device = ["cortex-m", "cortex-m-rt"]
cortex_a_device = []
debug = ["cortex-m-semihosting"]
lm3s6965 = ["cortex_m_device", "ti_lm3s", "ti_lm3s/s6965"]
