[package]
name = "arm32"
version = "0.1.0"
edition = "2021"
description = "ARM32 kernel support"
license = "MIT"
publish = false

[dependencies]
cfg-if = "1.0.0"
cortex-a = "7.0.1"
cortex-m = "0.7.3"
cortex-m-rt = "^0.6.15"
cortex-m-semihosting = "0.3.7"
cpu = { path = "../../drivers/cpu/" }
device = { path = "../../drivers/device/" }
dif = "0.1.1"
init = { path = "../../init/" }
kinfo = { path = "../../kernel/kinfo/" }
nmallocator = { path = "../../mm/nmallocator/" }
novusk_syscalls = "0.2.1"
novuskinc = { path = "../../include/novusk/" }
printk = { path = "../../kernel/printk/" }
rpi2kernel = { path = "../../drivers/rpi/rpi2kernel/" }
rpi = { path = "../../drivers/rpi/" }
stellarisd = { path = "../../drivers/platform/arm/stellarisd/" }
# stmd = { path = "../../drivers/firmware/arm/stmd/" }
time = { path = "../../kernel/time/" }

[build-dependencies]
difi = "0.1.0"

[features]
cortex_a = ["nmallocator/wee_allocator"]
cortex_m = ["nmallocator/linked_list"]
rpi2 = ["cortex_a", "rpi/rpi2"]
stellaris_6965 = ["cortex_m", "stellarisd/stellaris_6965"]
# not_stm32 = ["stmd/stm32f407"]
# stm32f407 = ["cortex_m", "stmd/stm32f407"]
