[package]
name = "riscv"
version = "0.1.0"
edition = "2021"
description = "Support for RISCV32/64"
license = "MIT"
publish = false

[dependencies]
device = { path = "../../drivers/device/" }
dif = "0.1.1"
kinfo = { path = "../../kernel/kinfo/" }
nmallocator = { path = "../../mm/nmallocator/", features = ["wee_allocator"] }
novusk_syscalls = "0.2.1"
novuskinc = { git = "https://github.com/new-kernel/novuskinc", features = ["v3"] }
printk = { path = "../../kernel/printk/" }
r0 = "1.0.0"
riscv = "0.7.0"
riscv-rt = "0.9.0"
setup = { path = "../../kernel/setup/" }
sifive = { path = "../../drivers/platform/sifive/", optional = true }

[build-dependencies]
difi = "0.1.0"

[features]
hifive = ["sifive", "sifive/hifive"]
lofive = ["sifive", "sifive/lofive"]
virt = []
