[package]
name = "x86"
version = "0.1.0"
edition = "2018"
description = "x86 family support for Novusk"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "9.0.0"
x86_64-sound = { path = "../../sound/x86_64-sound/" }
x86_64 = "0.13.6"

[dependencies]
register = { version = "1.x.x", optional = true }
gpu = { path = "../../drivers/gpu/" }
kinfo = { path = "../../kernel/kinfo/" }
libcolor = { path = "../../lib/libcolor/" }
nkuefi = { path = "../../drivers/nkuefi/" }
pc-keyboard = "0.5.1"
volatile = "0.2.6"
x86 = { git = "https://github.com/NathanMcMillan54/rust-x86" }


[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[features]
custom_keyboard = ["register"]
grub = ["register"]
uefi_boot = ["register"]
uk_keyboard = ["register"]
us_keyboard = ["register"]
vga_0xa = ["register"]
