[package]
name = "x86"
version = "0.1.0"
edition = "2018"
description = "x86 family support for Novusk"

[target.'cfg(target_arch = "x86_64")'.dependencies]
amd64_timer = "1.3.0"
bootloader = "0.9.18"
raw-cpuid = "9.0.0"
x86_64-sound = { path = "../../sound/x86_64-sound/" }
x86_64 = "0.14.4"

[dependencies]
gpu = { path = "../../drivers/gpu/" }
kinfo = { path = "../../kernel/kinfo/" }
libcolor = { path = "../../lib/libcolor/" }
modules = { path = "../../kernel/modules/" }
nkuefi = { path = "../../drivers/nkuefi/" }
ps2 = { path = "../../drivers/firmware/input/ps2/" }
volatile = "0.2.6"
x86 = { git = "https://github.com/NathanMcMillan54/rust-x86" }

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[build-dependencies]
cc = "1.0.69"

[features]
bios_boot = []
custom_keyboard = ["ps2/custom_layout"]
grub = ["bios_boot"]
uefi_boot = []
uk_keyboard = ["ps2/uk_layout"]
us_keyboard = ["ps2/us_layout"]
vga_0xa = []
virt = []
