[package]
name = "x86_64"
version = "0.1.0"
edition = "2021"
description = "x86_64 support for Novusk"
license = "MIT"
publish = false

[dependencies]
# amd64_timer = "1.3.0"
bootloader = { version = "0.11.2", features = ["map_physical_memory"] }
dif = "0.1.1"
# init = { path = "../../init/" }
# kinfo = { path = "../../kernel/kinfo/" }
libcolor = { path = "../../lib/libcolor/" }
# modules = { path = "../../kernel/modules/" }
kernel = { path = "../../kernel/" }
nkuefi = { path = "../../drivers/nkuefi/", optional = true }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
#multiboot = { path = "../../drivers/boot/multiboot/" }
#pc_keyboard = { path = "../../drivers/input/keyboard/pc_keyboard/" }
nmallocator = { path = "../../mm/nmallocator/", features = ["wee"] }
# notify = { path = "../../kernel/notify/" }
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", branch = "novusk_build", features = ["v3"] }
#novusk_syscalls = "0.2.0"
#pic8259 = "0.10.2"
# printk = { path = "../../kernel/printk/" }
volatile = "0.2.6"
raw-cpuid = "10.4.0"
#setup = { path = "../../kernel/setup/" }
spin = { version = "0.9.2", features = ["spin_mutex"] }
time = { path = "../../kernel/time/" }
#usbd = { path = "../../drivers/usbd/" }
#x86_64-sound = { path = "../../sound/x86_64-sound/" }
x86 = "0.51.0"
x86_64 = "0.14.5"

[dependencies.crossbeam-queue]
version = "0.3.5"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[build-dependencies]
difi = "0.1.0"
cc = "1.0.0"

[features]
bios_boot = []
bootloader_rs = []
grub = ["bios_boot"]
uefi_boot = ["nkuefi"]
vga_0xa = []
virt = []
