[package]
name = "xtensa"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
device = { path = "../../drivers/device/" }
esp = { path = "../../drivers/platform/esp/" }
kinfo = { path = "../../kernel/kinfo/" }
xtensa-lx = "0.4.0"
xtensa-lx-rt = "0.7.0"

[features]
default = ["esp32"]
esp32 = ["esp/esp32"]
