[package]
name = "gpu"
version = "0.1.0"
edition = "2018"
description = "GPU setup and initialization"

[target.'cfg(any(target_arch = "aarch64", target_arch = "arm"))'.dependencies]
armfb = { path = "armfb/" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
vgag = { path = "vgag/" }

[dependencies]
kinfo = { path = "../../kernel/kinfo/" }
lazy_static = "1.4.0"
libcolor = { path = "../../lib/libcolor/" }
printk = { path = "../../kernel/printk/" }
spin = "0.9.2"
