[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
novuskinc = { path = "../../include/novusk/" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
armfb = { path = "armfb/" }
rpi = { path = "../rpi/", features = ["rpi3"] }

[target.'cfg(target_arch = "arm")'.dependencies]
armfb = { path = "armfb/" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
vgag = { path = "vgag/" }
