[package]
name = "input"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"

[dependencies]
# ps2_keyboard = { path = "../firmware/input/ps2_keyboard/" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x64_ps2_mouse = { path = "../firmware/input/x64_ps2_mouse/" }
