[package]
name = "nkuefi"
version = "0.1.0"
edition = "2021"
description = "Novusk Kernel UEFI bootloader/driver"
license = "MIT"
publish = false

[[bin]]
name = "nkuefi_bootloader"
path = "src/main.rs"
edition = "2021"

[lib]
name = "nkuefi"
path = "src/lib.rs"
edition = "2021"

[dependencies]
uefi = "0.19.1"
uefi-services = "0.16.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.2.15"
xmas-elf = "0.9.0"
x86_64 = "0.14.10"
