[package]
name = "rpi"
version = "0.1.0"
edition = "2021"
description = "Drivers for RaspberryPi boards"
license = "MIT"
publish = false

[dependencies]
# cortex-a = "6.1.0"
device = { path = "../device" }
libbmu = { path = "../../lib/libbmu/" }
mailbox = { path = "../platform/mailbox/" }
mio = { path = "../../mm/mio/" }
nmallocator = { path = "../../mm/nmallocator/", features = ["wee_allocator"] }
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", features = ["v3"] }
tock-registers = "0.7.0"

[features]
default = ["rpi3"]
rpi3 = []
rpi2 = []
