[package]
name = "rpi"
version = "0.1.0"
edition = "2021"
description = "Drivers for RaspberryPi boards"
license = "MIT"
publish = false

[dependencies]
# cortex-a = "6.1.0
bcm_soc = { path = "../cpu/bcm_soc/" }
console = { path = "../../kernel/printk/console/" }
device = { path = "../device" }
libbmu = { path = "../../lib/libbmu/" }
mailbox = { path = "../platform/mailbox/" }
mio = { path = "../../mm/mio/" }
nmallocator = { path = "../../mm/nmallocator/" }
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", features = ["v3"] }
tock-registers = "0.8.1"

[features]
default = ["rpi3"]
rpi3 = ["bcm_soc/bcm2837"]
rpi2 = []
