[package]
name = "uefi_kd"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"
description = "UEFI kernel driver"


[dependencies]
uefi = "0.8.1"
# Drivers
fs = { path = "../fs/" }
gpu = { path = "../gpu/" }
# Kernel
kerror = { path = "../../kernel/kerror/" }
kinfo = { path = "../../kernel/kinfo/" }
# GPU
gop = { path = "../../gpu/gop/" }