[package]
name = "x86_64_thread"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"

[dependencies]
kerror = { path = "../../kernel/kerror/" }
x86_64 = "0.13.6"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false
