[package]
name = "fat"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcm"]
edition = "2018"

[dependencies]
uefi = "0.8.1"
# Kernel
kerror = { path = "../../kernel/kerror/" }
kinfo = { path = "../../kernel/kinfo/" }
printk = { path = "../../kernel/printk/" }
# Libraries
libefi = { path = "../../lib/libefi" }
