[package]
name = "irq"
version = "0.1.0"
edition = "2021"
description = "Main kernel IRQ handler"

[lib]
name = "irq"
crate-type = ["staticlib"]

[dependencies]
asminc = { path = "../../include/asm/" }
nmallocator = { path = "../../mm/nmallocator/" }
novuskinc = { path = "../../include/novusk/" }
printk = { path = "../printk/" }

[features]
default = ["16irqs"]
12irqs = []
16irqs = []
24irqs = []
32irqs = []
48irqs = []
64irqs = []
120irqs = []
240irqs = []
