[package]
name = "konfig"
version = "0.1.0"
edition = "2021"
description = "Kernel configurations"

[dependencies]
lazy_static = { version = "1.4", features = ["spin_no_std"] }
printk = { path = "../printk/" }
spin = { version = "0.9.2", features = ["spin_mutex"] }

[features]
default_config = []
custom_config = []
