[package]
name = "modules"
version = "0.1.0"
edition = "2021"
description = "Starts and handles kernel modules"
license = "MIT"
publish = false

[dependencies]
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", features = ["v3"] }
printk = { path = "../printk/" }
ex1 = { path = "ex1/" }
fscheck = { path = "fscheck/" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
armfb = { path = "../../drivers/fb/armfb/" }
sf_rpilcd_35 = { path = "../../drivers/platform/sunfounder/sf_rpilcd_35/" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
vgag = { path = "../../drivers/gpu/vgag/" }
