[package]
name = "setup"
version = "0.1.0"
edition = "2021"
description = "Setup before kernel_init and setup before kernel_main"
license = "MIT"
publish = false

[dependencies]
kinfo = { path = "../kinfo/" }
konfig = { path = "../konfig/" }
libbmu = { path = "../../lib/libbmu/" }
novuskinc = { path = "../../include/novuskinc/", feature = ["v3"] }
printk = { path = "../printk/" }
sos = { path = "../../drivers/sos/" }
unistd = { path = "../../lib/libc/unistd/" }
