[package]
name = "setup"
version = "0.1.0"
edition = "2021"
description = "Setup before kernel_init and setup before kernel_main"
license = "MIT"
publish = false

[dependencies]
dif = "0.1.1"
kinfo = { path = "../kinfo/" }
konfig = { path = "../konfig/" }
libbmu = { path = "../../lib/libbmu/" }
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", feature = ["v3"] }
printk = { path = "../printk/" }
