[package]
name = "libwin"
version = "0.1.0"
edition = "2021"
description = "Library for GUI windows"
license = "MIT"
publish = false

[target.'cfg(target_arch = "x86_64")'.dependencies]
novuskinc = { git = "https://github.com/new-kernel/novuskinc/", features = ["v3"] }
vgag = { path = "../../drivers/gpu/vgag/" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
armfb = { path = "../../drivers/fb/armfb/" }
