[package]
name = "kernel_example"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"

[dependencies]
libnu = { git = "https://github.com/new-kernel/libnu/" }

[target.'cfg(target_arch = "x86_64")']
[dependencies.x86]
path = "../../arch/x86/"
features = ["default_machine"]
