[package]
name = "os_example"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"

[dependencies]
libnu = "0.1.2"
uefi = "0.8.1"

[dependencies.aarch64]
git = "https://github.com/NathanMcMillan54/novusk/"
path = "../../arch/aarch64/"
features = ["default_machine"]
